@@ -97,8 +97,8 @@ int main(int argc, char **argv)
       scan = umwsu_scan_new(u, watch_event.full_path, flags);
       umwsu_scan_add_callback(scan, report_print_callback, stdout);
       umwsu_scan_start(scan);
-      umwsu_scan_run(scan);
-      umwsu_scan_wait_for_completion(scan);
+      while (umwsu_scan_run(scan) == UMWSU_SCAN_CONTINUE)
+	;
       umwsu_scan_free(scan);
       break;
     default:
